[project]
name = "certbot-dns-poweradmin"
version = "0.1.0"
description = "PowerAdmin DNS Authenticator plugin for Certbot"
authors = [
    { name = "Edmondas Girkantas", email = "edmondas@girkantas.lt" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "acme>=5.1.0",
    "certbot>=5.1.0",
    "requests>=2.32.5"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking"
]
[project.urls]
Homepage = "https://github.com/poweradmin/certbot-dns-poweradmin"
"Bug Reports" = "https://github.com/poweradmin/certbot-dns-poweradmin/issues"
Source = "https://github.com/poweradmin/certbot-dns-poweradmin"

[project.entry-points."certbot.plugins"]
dns-poweradmin = "certbot_dns_poweradmin._internal.dns_poweradmin:Authenticator"

[project.optional-dependencies]
dev = [
    "requests-mock>=1.11.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["certbot_dns_poweradmin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
