[project]
name = "certbot-dns-poweradmin"
version = "0.1.1"
description = "PowerAdmin DNS Authenticator plugin for Certbot"
authors = [
    { name = "Edmondas Girkantas", email = "edmondas@girkantas.lt" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "acme>=5.1.0",
    "certbot>=5.1.0",
    "requests>=2.32.5"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking"
]
[project.urls]
Homepage = "https://github.com/poweradmin/certbot-dns-poweradmin"
"Bug Reports" = "https://github.com/poweradmin/certbot-dns-poweradmin/issues"
Source = "https://github.com/poweradmin/certbot-dns-poweradmin"

[project.entry-points."certbot.plugins"]
dns-poweradmin = "certbot_dns_poweradmin._internal.dns_poweradmin:Authenticator"

[project.optional-dependencies]
dev = [
    "requests-mock>=1.11.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "ruff>=0.8.0",
    "tox>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["certbot_dns_poweradmin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    "setup.py",
]

[[tool.mypy.overrides]]
module = [
    "certbot.*",
    "acme.*",
    "requests_mock.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "certbot_dns_poweradmin._internal.dns_poweradmin"
# DNSAuthenticator from certbot has type Any, so we disable misc errors for subclassing
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "certbot_dns_poweradmin._internal.tests.*"
strict = false
disable_error_code = ["misc", "method-assign", "type-arg"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF015", # prefer next() over [0] - less readable
]

[tool.ruff.lint.isort]
known-first-party = ["certbot_dns_poweradmin"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
